feat(search): retrieve lexically as well as by vector
BM25 only re-scored kNN candidates, so a document its terms pointed at but the
embedding missed was unreachable at any weight. LexicalIndex now ranks the whole
corpus and the two candidate lists are unioned.

search.fusion selects blend or rrf. ONNX gold set MRR 0.854 to 0.938.